--- a/classifiedClient/Chats.xaml
+++ b/classifiedClient/Chats.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="classifiedClient.Chat"
+﻿<Window x:Class="classifiedClient.Chats"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,9 +7,12 @@
         mc:Ignorable="d"
         Title="Chat" Height="300" Width="300">
 	<Grid>
-		<ListView Name="chats" Margin="0,28,-0.4,27.4"></ListView>
-		<TextBox Name="message"  HorizontalAlignment="Left" Height="23" Margin="0,248,-0.4,-0.6" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="294"/>
-		<TextBlock x:Name="userName" HorizontalAlignment="Left" Margin="0,0,-0.4,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="25" Width="294"/>
-
+		<StackPanel>
+			<WrapPanel>
+				<TextBox Name="recipient" Width="233" ></TextBox>
+				<Button  Content="Open Chat" Click="Button_Click"/>
+			</WrapPanel>
+			<ListBox Name="chats" Margin="0,0,-0.4,0" Height="251"></ListBox>
+		</StackPanel>
 	</Grid>
 </Window>
